# sae_ml

./: .gitignore  README.md  config.py  config.yaml  pyproject.toml  top_features.json
analyse/: ablation.py  code_switch.py  dataset.py  extract_features.py  gemma_scope.py  plot_ablation.py
results/ablation/gemma-2-2b/es/: sae_ce_loss_all_layers_0_1.npy  sae_ce_loss_all_layers_0_2.npy  sae_ce_loss_all_layers_1_1.npy
results/ablation/gemma-2-2b/fr/: sae_ce_loss_all_layers_0_1.npy  sae_ce_loss_all_layers_0_2.npy  sae_ce_loss_all_layers_1_1.npy
results/ablation/gemma-2-2b/ko/: ori_ce_loss.npy  sae_ce_loss_all_layers_0_1.npy  sae_ce_loss_all_layers_0_2.npy  sae_ce_loss_all_layers_1_1.npy
results/code_switch/gemma-2-2b/en/: data.json
results/code_switch/gemma-2-2b/es/: data.json
results/code_switch/gemma-2-2b/fr/: data.json
results/code_switch/gemma-2-2b/ko/: data.json
results/code_switch/gemma-2-2b/zh/: data.json
training/: config.py  loss.py  sae.py  train.py  utils.py
